k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  rules:
    - host: cfb3c570becef7897bce66a1bd92b769.gr7.eu-west-2.eks.amazonaws.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: springboot-service
                port:
                  number: 80
